--- a/CommandLineParser/CommandLineParser.csproj
+++ b/CommandLineParser/CommandLineParser.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.1.0-alpha</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageTags>peamel, netstandard, commandline</PackageTags>
+    <PackageId>Peamel.CommandLineParser</PackageId>
+    <RootNamespace>Peamel.CommandLineParser</RootNamespace>
+    <AssemblyName>Peamel.CommandLineParser</AssemblyName>
   </PropertyGroup>
 
 </Project>
