--- a/CommandLineParser/CommandLineParser.csproj
+++ b/CommandLineParser/CommandLineParser.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.0-alpha</Version>
+    <Version>0.1.2-alpha</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>peamel, netstandard, commandline</PackageTags>
     <PackageId>Peamel.CommandLineParser</PackageId>
